--- a/github/workflows/ci-cd.yml
+++ b/github/workflows/ci-cd.yml
@@ -31,12 +31,9 @@ jobs:
       - name: Build
         run: go build -o my-go-app .
 
-      # 6. Deploy (Example: SSH to server)
-      - name: Deploy to Server
-        uses: appleboy/scp-action@master
+      # 6. Upload build artifact
+      - name: Upload build artifact
+        uses: actions/upload-artifact@v3
         with:
-          host: ${{ secrets.SERVER_HOST }}
-          username: ${{ secrets.SERVER_USER }}
-          key: ${{ secrets.SERVER_SSH_KEY }}
-          source: "my-go-app"
-          target: "/home/${{ secrets.SERVER_USER }}/my-go-app"
+          name: my-go-app-binary
+          path: my-go-app
