--- a/github/workflows/main.yml
+++ b/github/workflows/main.yml
@@ -11,13 +11,13 @@ jobs:
     steps:
       # 1. Checkout code
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       # 2. Setup Go
       - name: Setup Go
         uses: actions/setup-go@v4
         with:
-          go-version: '1.22' # তোমার Go ভার্সন
+          go-version: '1.24'
 
       # 3. Install dependencies
       - name: Install dependencies
